# bdk-jni

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build-android.sh  build-jvm.sh  build.gradle  build.sh  settings.gradle
.github/: pull_request_template.md
.github/workflows/: builder.yml  cont_integration.yml  releaser.yml
android/: .gitignore  build.gradle
android/src/androidTest/java/org/bitcoindevkit/bdkjni/: AndroidLibTest.kt  ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/org/bitcoindevkit/bdkjni/: Types.kt
example_app/: .gitignore
example_app/app/: build.gradle
example_app/app/src/androidTest/java/com/afilini/myapplication/: ExampleInstrumentedTest.kt
example_app/app/src/main/: AndroidManifest.xml
example_app/app/src/main/java/com/afilini/myapplication/: MainActivity.kt
example_app/app/src/main/java/org/magicalbitcoin/wallet/: Lib.kt  Types.kt
example_app/app/src/main/res/menu/: menu_main.xml
example_app/app/src/test/java/com/afilini/myapplication/: ExampleUnitTest.kt
example_app/gradle/wrapper/: gradle-wrapper.properties
gradle/wrapper/: gradle-wrapper.properties
jvm/: build.gradle
jvm/src/main/java/org/bitcoindevkit/bdkjni/: Lib.kt  Types.kt
jvm/src/test/java/org/bitcoindevkit/bdkjni/: JvmLibTest.kt  LibTest.kt
native-libs/: Cargo.toml  build-android.sh  build-jvm.sh
native-libs/src/: lib.rs
script/: install-emulator.sh  start-emulator.sh
src/: lib.rs
test-fixtures/: build.gradle
test-fixtures/src/main/java/org/bitcoindevkit/bdkjni/: LibTest.kt
