[package]
name = "bdk-jni"
version = "0.1.0"
authors = ["Alekos Filini <alekos.filini@gmail.com>"]
edition = "2018"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.15", default-features = false }
android_logger = "0.8"

[lib]
crate-type = ["dylib"]

[dependencies]
bdk = { git = "https://github.com/bitcoindevkit/bdk.git", rev = "33a5ba6" }
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "^0.11"

[patch.crates-io]
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin/", rev = "478e091" }
miniscript = { git = "https://github.com/MagicalBitcoin/rust-miniscript", branch = "descriptor-public-key" }

[profile.release]
opt-level = 'z'  # Optimize for size, faster load time
lto = true
