[package]
name = "bdk-jni"
version = "0.2.1-dev"
authors = ["Alekos Filini <alekos.filini@gmail.com>"]
edition = "2018"

[target.'cfg(target_os="android")'.dependencies]
android_logger = "0.8"

[lib]
crate-type = ["dylib"]

[dependencies]
bdk = { version = "^0.7", features = ["all-keys"] }
jni = { version = "0.15", default-features = false }
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "^0.11"
rand = "^0.7"

[profile.release]
opt-level = 'z'  # Optimize for size, faster load time
lto = true
